--- a/ChampionMains.Pyrobot.Data/packages.config
+++ b/ChampionMains.Pyrobot.Data/packages.config
@@ -3,6 +3,8 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net452" />
+  <package id="MingweiSamuel.Camille" version="2.2.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
 </packages>
