--- a/ChampionMains.Pyrobot.Infrastructure/packages.config
+++ b/ChampionMains.Pyrobot.Infrastructure/packages.config
@@ -10,7 +10,7 @@
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="MingweiSamuel.Camille" version="2.0.0-alpha-nightly-2018-12-16-3842eae176" targetFramework="net452" />
+  <package id="MingweiSamuel.Camille" version="2.2.0" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
