--- a/ChampionMains.Pyrobot.Startup/ChampionMains.Pyrobot.Startup.csproj
+++ b/ChampionMains.Pyrobot.Startup/ChampionMains.Pyrobot.Startup.csproj
@@ -32,8 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Camille, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MingweiSamuel.Camille.2.0.0-alpha-nightly-2018-12-16-3842eae176\lib\net45\Camille.dll</HintPath>
+    <Reference Include="Camille, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MingweiSamuel.Camille.2.2.0\lib\net45\Camille.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
