--- a/ChampionMains.Pyrobot.WebJob/packages.config
+++ b/ChampionMains.Pyrobot.WebJob/packages.config
@@ -17,7 +17,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.12" targetFramework="net452" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net45" />
-  <package id="MingweiSamuel.Camille" version="2.0.0-alpha-nightly-2018-12-16-3842eae176" targetFramework="net452" />
+  <package id="MingweiSamuel.Camille" version="2.2.0" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="SimpleInjector" version="3.2.0" targetFramework="net452" />
