--- a/ChampionMains.Pyrobot.WebJob/packages.config
+++ b/ChampionMains.Pyrobot.WebJob/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs" version="1.1.2" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs.Core" version="1.1.2" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net461" />
@@ -20,7 +21,9 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net461" />
   <package id="MingweiSamuel.Camille" version="2.2.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Reddit" version="1.1.1" targetFramework="net461" />
+  <package id="RestSharp" version="106.6.9" targetFramework="net461" />
   <package id="SimpleInjector" version="3.2.0" targetFramework="net461" />
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
