--- a/ChampionMains.Pyrobot.Test/packages.config
+++ b/ChampionMains.Pyrobot.Test/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
+  <package id="MingweiSamuel.Reddit.NET" version="2.2.0-develop" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="Reddit" version="1.2.0" targetFramework="net461" />
   <package id="RestSharp" version="106.6.9" targetFramework="net461" />
 </packages>
