--- a/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
+++ b/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
@@ -51,8 +51,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Camille, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MingweiSamuel.Camille.2.3.0\lib\net45\Camille.dll</HintPath>
+    <Reference Include="Camille, Version=2.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MingweiSamuel.Camille.2.7.0\lib\net45\Camille.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
@@ -258,7 +258,7 @@
     <Delete Files="App.config" />
     <Copy SourceFiles="App.template.config" DestinationFiles="App.config" />
   </Target>
-  <Target Name="UpdateAppConfigBeforeRun" BeforeTargets="Build" Condition="Exists('App.Local.Config')">
+  <Target Name="UpdateAppConfigBeforeRun" BeforeTargets="Build" Condition="Exists('App.Local.config')">
     <Message Text="Configuration: $(Configuration): App.Local.config" Importance="high" />
     <TransformXml Source="App.template.config" Transform="App.Local.config" Destination="App.config" />
   </Target>
